--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^22.8.4",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
+    "prisma": "^5.21.1",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
